--- a/frontend/src/assets/styles/cmps/_taskDetails.scss
+++ b/frontend/src/assets/styles/cmps/_taskDetails.scss
@@ -3,6 +3,42 @@
         background-origin: content-box;
         padding: 0px;
         box-sizing: border-box;
+        position: absolute;
+        .edit-members-container {
+            left: 408px;
+            top: 186px;
+        }
+        .edit-labels-container {
+            left: 408px;
+            top: 217px;
+        }
+        .dates-form {
+            left: 486px;
+            top: 304px;
+        }
+        .attachment {
+            left: 475px;
+            top: 345px;
+            z-index: 4;
+            position: absolute;
+            background-color: #fff;
+            border-radius: 3px;
+            padding: 10px;
+            text-decoration: none;
+            box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+            label {
+                padding: 5px;
+                margin-bottom: 10px;
+                text-align: center;
+            }
+            button {
+                width: fit-content;
+            }
+            input {
+                padding: 5px;
+                margin-bottom: 10px;
+            }
+        }
         .details {
             margin-left: 10px;
         }
@@ -23,7 +59,6 @@
             width: 700px;
             background-color: #f4f5f7;
             border-radius: 5px;
-            position: absolute;
             z-index: 2;
         }
         .cover {
@@ -33,6 +68,25 @@
             max-height: 80px;
             align-items: flex-end;
             justify-content: space-between;
+        }
+        .title {
+            align-items: center;
+            padding-left: 10px;
+        }
+        .title-input {
+            font-size: 1.125rem;
+            line-height: 1;
+            font-weight: bold;
+            background-color: #f4f5f7;
+            border-radius: 5px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            border: none;
+            color: #333;
+        }
+        .title-input:focus {
+            background-color: white;
+            border: none;
         }
         textarea {
             // width: 90%;
@@ -57,10 +111,13 @@
         }
         .comments {
             justify-content: space-around;
+            .MuiGrid-root {
+                margin-bottom: 15px;
+            }
         }
         .comment {
             align-items: flex-end;
-            margin-top: 10px;
+            margin-top: 5px;
             .avatar {
                 width: 30px;
                 height: 30px;
@@ -74,16 +131,15 @@
         .form {
             margin-top: 10px;
             margin-bottom: 10px;
-        }
-        .modal {
-            position: relative;
-            right: -111px;
-            top: 129px;
-            border-radius: 10px;
-            z-index: 3;
+            textarea,
+            .MuiInputBase-root {
+                background-color: white;
+                border: none;
+            }
         }
         .members {
             margin-bottom: 10px;
+            border: none
         }
         .labels .label {
             font-size: 0.8rem;
@@ -105,21 +161,6 @@
             width: 70px;
             text-align: center;
         }
-        // .dates-form {
-        //     z-index: 3;
-        //     background-color: #efefef;
-        //     flex-wrap: wrap;
-        //     position: absolute;
-        //     right: 293px;
-        //     top: 288.7px;
-        //     border-radius: 5px;
-        //     padding: 5px;
-        //     .dates {
-        //         width: 220px;
-        //         margin-right: 5px;
-        //         margin-left: 5px;
-        //     }
-        // }
         .preview-img {
             margin-top: 5px;
             width: 200px;
