--- a/frontend/src/assets/styles/cmps/_boardHeader.scss
+++ b/frontend/src/assets/styles/cmps/_boardHeader.scss
@@ -5,13 +5,12 @@
     padding: 0 5px;
     min-height: 49px;
     align-items: center;
-    color: #fff;
+    color: #243757;
     cursor: pointer;
-    font-family: montserrat, sans-serif;
     font-weight: 700;
     font-size: 1.25rem;
     height: 32px;
-    background-color: rgba(34, 34, 34, 0.205);
+    background-color: rgba(0, 0, 0, 0);
     margin-top: 9px;
     width: 100%;
 
@@ -34,12 +33,12 @@
             }
         }
         .open-side-bar-btn {
-            background-color: rgba(0, 0, 0, 0.089);
-            box-shadow: inset 0 0 10px #0000001e;
+            background-color: rgba(255, 255, 255, 0.39);
+            // box-shadow: inset 0 0 10px #0000001e;
+            color: #243757;
 
             border-radius: 5px;
             justify-self: flex-end;
-            color: #ffffff;
         }
     }
 }
