--- a/frontend/src/assets/styles/cmps/_header.scss
+++ b/frontend/src/assets/styles/cmps/_header.scss
@@ -1,26 +1,33 @@
 .main-header {
     z-index: 1;
-    background-color: #7f7f7f;
-    display: flex;
-    justify-content: space-between;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: rem(30px);
-    padding-right: rem(30px);
+    background-color: #000000ad;
+    display: grid;
+    grid-template-columns: max-content max-content auto max-content;
+    padding: 5px 5px;
     width: 100%;
     position: fixed;
     opacity: 0.75;
     align-items: center;
+
+    > *:not(:first-child) {
+        margin-left: 30px;
+    }
+    .logo-header{
+        justify-self: center;
+        margin: 0;
+    }
+    .login-link-header{
+        justify-self: end;
+        padding: 0px 5px 0px 0px;
+        margin: 0px 5px 0px 0px;
+    }
+
     a {
         color: #fff;
     }
     a:hover {
+        color: #fff;
+        opacity: 0.7;
         text-decoration: none;
-    }
-}
-
-.left-header {
-    a {
-        padding-right: rem(10px);
     }
 }
