--- a/frontend/src/assets/styles/cmps/_sideBar.scss
+++ b/frontend/src/assets/styles/cmps/_sideBar.scss
@@ -85,12 +85,29 @@
                 }
             }
         }
+        .activities-title {
+            font-size: rem(18px);
+            font-weight: 350;
+        }
         .activities-list {
             color: #172b4d;
-
-            .activities-title {
-                font-size: rem(18px);
-                font-weight: 350;
+            overflow-y: auto;
+            height: 56%;
+            margin-bottom: 50px;
+            &::-webkit-scrollbar {
+                width:6px;
+            }
+            &::-webkit-scrollbar-thumb {
+                border-radius: 3px;
+                box-shadow: inset 0 0 6px #00000046;
+            }
+            &::-webkit-scrollbar-track {
+                border-radius: 3px;
+                background: rgba(9, 30, 66, 0.041);
+            }
+            &::-webkit-scrollbar-track-piece {
+                border-radius: 3px;
+                background: rgba(190, 194, 205, 0.548);
             }
             .activity-preview {
                 display: flex;
@@ -111,7 +128,6 @@
                     flex-direction: column;
                     position: relative;
                     bottom: 3px;
-                    
 
                     .at {
                         font-size: rem(12px);
