--- a/frontend/src/assets/styles/pages/_BoardPage.scss
+++ b/frontend/src/assets/styles/pages/_BoardPage.scss
@@ -5,6 +5,21 @@
     background-color: #1a1a1a;
     color: #fff;
     flex-grow: 1;
+    padding-top: 10px;
+    margin-top: 10px;
+    &::-webkit-scrollbar {
+        width: 15px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        box-shadow: inset 0 0 10px #414a55;
+    }
+    &::-webkit-scrollbar-track {
+        background: rgba(29, 105, 238, 0.041);
+    }
+    &::-webkit-scrollbar-track-piece {
+        background: #e7ebff;
+    }
 }
 
 .board-list {
