--- a/frontend/src/assets/styles/pages/_Home.scss
+++ b/frontend/src/assets/styles/pages/_Home.scss
@@ -1,6 +1,6 @@
 .home{ 
     font-family: "montserrat",sans-serif;
-    background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url("../../imgs/home.png");
+    background-image: linear-gradient(135deg, rgba(0,0,0,0.7)15%, rgba(255, 255, 255, 0.15) 80%),url("../../imgs/home.png");
     background-position: 50% rem(9px);
     background-repeat: no-repeat;
     background-size: cover;
