--- a/frontend/src/assets/styles/cmps/_boardHeader.scss
+++ b/frontend/src/assets/styles/cmps/_boardHeader.scss
@@ -19,17 +19,48 @@
         width: 100%;
         align-items: center;
         grid-template-columns: max-content max-content max-content auto;
+        .header-title{
+            background-color: rgba(255, 255, 255, 0.39);
+            border-radius: 5px;
+            padding: 0px 10px;     
+            width: 100%;   
+        }
+        .header-stats{
+            background-color: rgba(255, 255, 255, 0.39);
+            border-radius: 5px;
+            padding: 0px 10px;        
+        }
+        .board-title-input {
+            width: 150px;
+            outline: none;
+            border: none;
+            border-radius: 3px;
+            background-color: #fff;
+            color: #00395aec;
+            box-shadow: inset 0 0 0 2px #0079bf;
+            margin: 0;
+            padding: 8px 12px;
+        }
+        .board-title-input::placeholder {
+            opacity: 1;
+            color: #00395aec;
+        }
+
         > *:not(:first-child) {
             margin-left: 40px;
         }
         .header-avatars {
             display: flex;
-
+            height: 32px;
+            align-items:center ;
+            margin-left: 20px;
             > * {
+                height: 25px;
+                width: 25px;
                 border: 0.5px solid rgba(0, 0, 0, 0.37);
             }
             > *:not(:first-child) {
-                margin-left: -15px;
+                margin-left: -7px;
             }
         }
         .open-side-bar-btn {
