--- a/frontend/src/assets/styles/pages/_BoardPage.scss
+++ b/frontend/src/assets/styles/pages/_BoardPage.scss
@@ -95,7 +95,7 @@
     .delete-button {
         position: absolute;
         background-color: rgba(0, 0, 0, 0.219);
-        // opacity: 0;
+        opacity: 0;
         color:white;
         border-radius: 3px;
         margin: 0px 0px 10px 0px;
