--- a/frontend/src/assets/styles/pages/_BoardPage.scss
+++ b/frontend/src/assets/styles/pages/_BoardPage.scss
@@ -24,9 +24,14 @@
 
 
 .board-list {
-    max-width: rem(1100px);
+    max-width: 1100px;
     margin: 0 auto;
-    padding: rem(30px);
+    padding: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,250px);
+    grid-gap: 20px 10px;
+    gap: 20px 10px;
+    justify-content: center;
 }
 .create-board {
     padding: rem(12px);
