--- a/frontend/src/assets/styles/cmps/_group.scss
+++ b/frontend/src/assets/styles/cmps/_group.scss
@@ -92,6 +92,8 @@
             padding-top: 0;
             padding-bottom: 6px;
             .task-title-input {
+                font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
+                sans-serif;
                 outline: none;
                 border: none;
                 color: #00395aec;
