--- a/frontend/src/assets/styles/cmps/_taskOptions.scss
+++ b/frontend/src/assets/styles/cmps/_taskOptions.scss
@@ -33,6 +33,7 @@
             border-radius: 5px;
             border: 0.5px solid;
             width: 200px;
+            height: 166px;
         }
         button {
             margin-top: 10px;
