--- a/frontend/src/assets/styles/cmps/_checklist.scss
+++ b/frontend/src/assets/styles/cmps/_checklist.scss
@@ -1,30 +1,56 @@
-.checklists {
-    .todos {
-        margin-left: 32px;
-        p {
-            margin: 10px 0 5px 0;
-            font-size: 14px;
-            line-height: 20px;
-            font-weight: 400;
+        .checklists {
+            .todos {
+                margin-left: 32px;
+                p {
+                    margin: 10px 0 5px 0;
+                    font-size: 14px;
+                    line-height: 20px;
+                    font-weight: 400;
+                }
+            }
+            .title {
+                h3 {
+                    margin: 0;
+                }
+                .icon {
+                    margin-right: 5px;
+                }
+            }
+            .checkbox {
+                color: #0079bf;
+                width: 20px;
+                margin-right: 5px;
+                svg {
+                    height: 20px;
+                    width: 20px;
+                    color: #0079bf;
+                }
+            }
+            .todo {
+                justify-content: center;
+                &:hover {
+                    // background-color: rgba(9, 30, 66, .04);
+                    &>* {
+                        background-color: rgba(9, 30, 66, .04);
+                    }
+                }
+                .title-input {
+                    font-size: 14px;
+                    line-height: 20px;
+                    font-weight: 400;
+                    margin: 0;
+                }
+            }
+            button {
+                color: #172b4d;
+                font-size: 14px;
+                line-height: 20px;
+                font-weight: 400;
+                align-items: center;
+                justify-content: center;
+                border-radius: 3px;
+                cursor: pointer;
+                padding: 6px 12px;
+                margin: 5px 0 20px 0;
+            }
         }
-    }
-    .checkbox {
-        color: #0079bf;
-        width: 20px;
-        margin-right: 5px;
-        svg {
-            height: 20px;
-            width: 20px;
-            color: #0079bf;
-        }
-    }
-    .todo {
-        justify-content: center;
-    }
-    .title-input {
-        font-size: 14px;
-        line-height: 20px;
-        font-weight: 400;
-        margin: 0;
-    }
-}
