--- a/frontend/src/assets/styles/cmps/_checklist.scss
+++ b/frontend/src/assets/styles/cmps/_checklist.scss
@@ -1,6 +1,15 @@
         .checklists {
+            margin: 20px 0 20px 0;
+            .container {
+                width: 100%;
+                justify-content: space-between;
+                align-content: center;
+                button {
+                    margin: 0;
+                }
+            }
             .todos {
-                margin-left: 32px;
+                margin-left: 5px;
                 p {
                     margin: 10px 0 5px 0;
                     font-size: 14px;
@@ -17,7 +26,6 @@
                 }
             }
             .checkbox {
-                color: #0079bf;
                 width: 20px;
                 margin-right: 5px;
                 svg {
@@ -27,10 +35,13 @@
                 }
             }
             .todo {
-                justify-content: center;
+                margin-left: 2px;
                 &:hover {
                     // background-color: rgba(9, 30, 66, .04);
-                    &>* {
+                    // &>* {
+                    //     background-color: rgba(9, 30, 66, .04);
+                    // }
+                    .title-input {
                         background-color: rgba(9, 30, 66, .04);
                     }
                 }
@@ -39,6 +50,7 @@
                     line-height: 20px;
                     font-weight: 400;
                     margin: 0;
+                    text-decoration: line-through;
                 }
             }
             button {
@@ -51,6 +63,7 @@
                 border-radius: 3px;
                 cursor: pointer;
                 padding: 6px 12px;
-                margin: 5px 0 20px 0;
+                margin: 5px 0 20px 30px;
+                background-color: rgba(9, 30, 66, .04);
             }
         }
